--- a/Hummingbird/Base.lproj/Main.storyboard
+++ b/Hummingbird/Base.lproj/Main.storyboard
@@ -102,16 +102,27 @@
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add any extra info about the song here..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AC5-Ue-mHj">
                                 <color key="backgroundColor" red="1" green="0.678772178" blue="0.64253921629999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="NeC-fW-NKD"/>
-                                </constraints>
                                 <color key="textColor" white="0.2101247903" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="heC-kq-TL7">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="5mW-KG-mIe"/>
+                                    <constraint firstAttribute="width" constant="77" id="zEu-17-3ge"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <state key="normal" title="Genre"/>
+                                <connections>
+                                    <segue destination="5iA-iE-YeE" kind="show" identifier="toGenres" id="ymk-eF-7jl"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0EU-Ck-iku" customClass="DACircularProgressView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNO-9I-AKu">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="81" id="vWh-CZ-rQj"/>
+                                    <constraint firstAttribute="width" constant="81" id="5cp-uD-tHB"/>
                                 </constraints>
                                 <state key="normal" title="Record"/>
                                 <connections>
@@ -119,23 +130,21 @@
                                     <action selector="recordButtonUnpressed:" destination="iK9-8a-4aB" eventType="touchUpInside" id="rul-9a-iWd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="heC-kq-TL7">
-                                <frame key="frameInset" minX="16" minY="476" width="77" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                <state key="normal" title="Genre"/>
-                                <connections>
-                                    <segue destination="5iA-iE-YeE" kind="show" identifier="toGenres" id="ymk-eF-7jl"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.51120389470000005" blue="0.45607003229999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="AC5-Ue-mHj" firstAttribute="centerX" secondItem="cNO-9I-AKu" secondAttribute="centerX" id="0Vb-hE-PZQ"/>
-                            <constraint firstAttribute="bottom" secondItem="AC5-Ue-mHj" secondAttribute="bottom" constant="20" symbolic="YES" id="7wz-vJ-uKk"/>
-                            <constraint firstItem="AC5-Ue-mHj" firstAttribute="leading" secondItem="DNz-Pe-k7V" secondAttribute="leadingMargin" id="Ht2-Gu-DcA"/>
-                            <constraint firstItem="cNO-9I-AKu" firstAttribute="centerY" secondItem="DNz-Pe-k7V" secondAttribute="centerY" id="YMy-7c-cLu"/>
-                            <constraint firstItem="AC5-Ue-mHj" firstAttribute="trailing" secondItem="DNz-Pe-k7V" secondAttribute="trailingMargin" id="s4L-E9-7Ne"/>
+                            <constraint firstItem="AC5-Ue-mHj" firstAttribute="top" secondItem="heC-kq-TL7" secondAttribute="bottom" constant="8" symbolic="YES" id="FY6-pj-Ozn"/>
+                            <constraint firstItem="heC-kq-TL7" firstAttribute="leading" secondItem="DNz-Pe-k7V" secondAttribute="leadingMargin" id="GwN-Qb-ByC"/>
+                            <constraint firstItem="0EU-Ck-iku" firstAttribute="centerX" secondItem="AC5-Ue-mHj" secondAttribute="centerX" id="H9c-r1-Htf"/>
+                            <constraint firstItem="0EU-Ck-iku" firstAttribute="leading" secondItem="DNz-Pe-k7V" secondAttribute="leadingMargin" constant="96" id="LPg-Lk-TSk"/>
+                            <constraint firstItem="AC5-Ue-mHj" firstAttribute="trailing" secondItem="DNz-Pe-k7V" secondAttribute="trailingMargin" id="Nle-55-6dE"/>
+                            <constraint firstItem="0EU-Ck-iku" firstAttribute="top" secondItem="cNO-9I-AKu" secondAttribute="bottom" constant="8" symbolic="YES" id="SVh-JE-fcn"/>
+                            <constraint firstItem="cNO-9I-AKu" firstAttribute="centerX" secondItem="0EU-Ck-iku" secondAttribute="centerX" id="cEl-Sl-RJo"/>
+                            <constraint firstItem="0EU-Ck-iku" firstAttribute="centerY" secondItem="DNz-Pe-k7V" secondAttribute="centerY" id="gbt-SX-hgJ"/>
+                            <constraint firstItem="heC-kq-TL7" firstAttribute="top" secondItem="1ri-9a-D1M" secondAttribute="bottom" constant="412" id="hR6-hN-QXp"/>
+                            <constraint firstItem="cNO-9I-AKu" firstAttribute="top" secondItem="1ri-9a-D1M" secondAttribute="bottom" constant="156" id="kSq-S4-kqI"/>
+                            <constraint firstAttribute="bottom" secondItem="AC5-Ue-mHj" secondAttribute="bottom" constant="20" symbolic="YES" id="l1b-Gu-Q7x"/>
+                            <constraint firstItem="heC-kq-TL7" firstAttribute="leading" secondItem="AC5-Ue-mHj" secondAttribute="leading" id="yf0-RA-6lJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New Humm" id="otJ-zF-0Tk">
@@ -146,6 +155,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="circlularProgress" destination="0EU-Ck-iku" id="oKn-nH-nw5"/>
                         <outlet property="recordButton" destination="cNO-9I-AKu" id="YNv-Fr-vgH"/>
                     </connections>
                 </viewController>
