--- a/Hummingbird/Base.lproj/Main.storyboard
+++ b/Hummingbird/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="heC-kq-TL7">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="77" id="1ck-PB-rsn"/>
+                                    <constraint firstAttribute="width" constant="77" id="7Yw-3n-508"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <state key="normal" title="Genre"/>
@@ -110,34 +110,9 @@
                                     <segue destination="5iA-iE-YeE" kind="show" identifier="toGenres" id="ymk-eF-7jl"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0EU-Ck-iku" customClass="KYCircularProgress" customModule="KYCircularProgress">
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <color key="tintColor" red="1" green="0.3198679250384715" blue="0.24315228056388882" alpha="1" colorSpace="calibratedRGB"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="progress">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="lineWidth">
-                                        <real key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="guideLineWidth">
-                                        <real key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNO-9I-AKu">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="81" id="RUI-TQ-q9O"/>
-                                </constraints>
-                                <state key="normal" title="Record"/>
-                                <connections>
-                                    <action selector="recordButtonPressed:" destination="iK9-8a-4aB" eventType="touchDown" id="4oj-eR-3Ol"/>
-                                    <action selector="recordButtonUnpressed:" destination="iK9-8a-4aB" eventType="touchUpInside" id="rul-9a-iWd"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0b-Nn-Ja1">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="102" id="bab-3V-E1r"/>
+                                    <constraint firstAttribute="width" constant="102" id="1pZ-CX-TQI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
@@ -145,27 +120,33 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l71-Ze-VYs">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="147" id="HjY-9o-LAx"/>
+                                    <constraint firstAttribute="width" constant="147" id="zys-c1-0l9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <state key="normal" title="Add Description"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNO-9I-AKu">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="81" id="CtU-FB-JjO"/>
+                                </constraints>
+                                <state key="normal" title="Record"/>
+                                <connections>
+                                    <action selector="recordButtonPressed:" destination="iK9-8a-4aB" eventType="touchDown" id="4oj-eR-3Ol"/>
+                                    <action selector="recordButtonUnpressed:" destination="iK9-8a-4aB" eventType="touchUpInside" id="rul-9a-iWd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.51120389470000005" blue="0.45607003229999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="cNO-9I-AKu" firstAttribute="centerX" secondItem="DNz-Pe-k7V" secondAttribute="centerX" id="43k-qj-qp8"/>
-                            <constraint firstItem="0EU-Ck-iku" firstAttribute="centerY" secondItem="DNz-Pe-k7V" secondAttribute="centerY" id="7ct-pv-JRW"/>
-                            <constraint firstItem="l71-Ze-VYs" firstAttribute="top" secondItem="heC-kq-TL7" secondAttribute="bottom" constant="24" id="DP9-94-Ixs"/>
-                            <constraint firstItem="ZSO-9m-QAp" firstAttribute="top" secondItem="Y0b-Nn-Ja1" secondAttribute="bottom" constant="163" id="JA1-TO-A9g"/>
-                            <constraint firstItem="Y0b-Nn-Ja1" firstAttribute="top" secondItem="0EU-Ck-iku" secondAttribute="bottom" constant="74" id="MsF-Y3-NbH"/>
-                            <constraint firstItem="ZSO-9m-QAp" firstAttribute="top" secondItem="l71-Ze-VYs" secondAttribute="bottom" constant="104" id="OJN-xi-ptc"/>
-                            <constraint firstItem="heC-kq-TL7" firstAttribute="centerY" secondItem="Y0b-Nn-Ja1" secondAttribute="centerY" id="PVW-Ok-A5m"/>
-                            <constraint firstItem="cNO-9I-AKu" firstAttribute="centerX" secondItem="0EU-Ck-iku" secondAttribute="centerX" id="SR6-eO-baM"/>
-                            <constraint firstItem="Y0b-Nn-Ja1" firstAttribute="trailing" secondItem="DNz-Pe-k7V" secondAttribute="trailingMargin" id="e6b-dG-wsn"/>
-                            <constraint firstItem="0EU-Ck-iku" firstAttribute="top" secondItem="cNO-9I-AKu" secondAttribute="bottom" constant="8" symbolic="YES" id="hGx-8G-cYL"/>
-                            <constraint firstItem="heC-kq-TL7" firstAttribute="leading" secondItem="DNz-Pe-k7V" secondAttribute="leadingMargin" id="igE-ms-CmC"/>
-                            <constraint firstItem="heC-kq-TL7" firstAttribute="leading" secondItem="l71-Ze-VYs" secondAttribute="leading" id="qsi-Mf-bJ4"/>
-                            <constraint firstItem="0EU-Ck-iku" firstAttribute="leading" secondItem="DNz-Pe-k7V" secondAttribute="leadingMargin" constant="96" id="wCe-dr-FDr"/>
+                            <constraint firstItem="Y0b-Nn-Ja1" firstAttribute="trailing" secondItem="DNz-Pe-k7V" secondAttribute="trailingMargin" id="4vv-7t-qoA"/>
+                            <constraint firstItem="ZSO-9m-QAp" firstAttribute="top" secondItem="Y0b-Nn-Ja1" secondAttribute="bottom" constant="163" id="9k4-SW-v66"/>
+                            <constraint firstItem="heC-kq-TL7" firstAttribute="centerY" secondItem="Y0b-Nn-Ja1" secondAttribute="centerY" id="Eau-ux-aqD"/>
+                            <constraint firstItem="heC-kq-TL7" firstAttribute="leading" secondItem="DNz-Pe-k7V" secondAttribute="leadingMargin" id="N4H-AN-J1Q"/>
+                            <constraint firstItem="heC-kq-TL7" firstAttribute="leading" secondItem="l71-Ze-VYs" secondAttribute="leading" id="YkS-iO-Xgh"/>
+                            <constraint firstItem="cNO-9I-AKu" firstAttribute="centerX" secondItem="DNz-Pe-k7V" secondAttribute="centerX" id="abQ-sX-IHc"/>
+                            <constraint firstItem="l71-Ze-VYs" firstAttribute="top" secondItem="heC-kq-TL7" secondAttribute="bottom" constant="24" id="fb6-l9-kAZ"/>
+                            <constraint firstItem="cNO-9I-AKu" firstAttribute="centerY" secondItem="DNz-Pe-k7V" secondAttribute="centerY" id="iDs-aC-nzk"/>
+                            <constraint firstItem="ZSO-9m-QAp" firstAttribute="top" secondItem="l71-Ze-VYs" secondAttribute="bottom" constant="104" id="vFt-IP-OwQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New Humm" id="otJ-zF-0Tk">
@@ -181,7 +162,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="circlularProgress" destination="0EU-Ck-iku" id="oKn-nH-nw5"/>
                         <outlet property="genreLabel" destination="Y0b-Nn-Ja1" id="1VK-8k-y76"/>
                         <outlet property="recordButton" destination="cNO-9I-AKu" id="YNv-Fr-vgH"/>
                     </connections>
