--- a/Hummingbird/Base.lproj/Main.storyboard
+++ b/Hummingbird/Base.lproj/Main.storyboard
@@ -19,16 +19,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxm-7s-PZC" customClass="FBSDKLoginButton">
-                                <frame key="frameInset" minX="82" minY="318" width="210" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxm-7s-PZC" customClass="FBSDKLoginButton">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="G3g-la-0ru"/>
+                                </constraints>
                                 <state key="normal" title="Facebook Login"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Hummingbird" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ip-LN-0L6">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="108" id="IbV-F6-OAT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
+                                <color key="textColor" white="0.2101247903" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="2JT-7L-Xaq"/>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.51120389470000005" blue="0.45607003229999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="2JT-7L-Xaq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="136" id="1Vg-Wu-cqC"/>
+                            <constraint firstItem="2JT-7L-Xaq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8uo-fH-4zw"/>
+                            <constraint firstItem="8ip-LN-0L6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="66" id="E7R-M1-AEU"/>
+                            <constraint firstItem="8ip-LN-0L6" firstAttribute="top" secondItem="2JT-7L-Xaq" secondAttribute="bottom" constant="8" symbolic="YES" id="GhR-K9-o44"/>
+                            <constraint firstItem="qxm-7s-PZC" firstAttribute="top" secondItem="8ip-LN-0L6" secondAttribute="bottom" constant="8" symbolic="YES" id="ZI4-w0-G88"/>
+                            <constraint firstItem="2JT-7L-Xaq" firstAttribute="centerX" secondItem="8ip-LN-0L6" secondAttribute="centerX" id="bzN-ty-p9H"/>
+                            <constraint firstItem="2JT-7L-Xaq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="71" id="h8S-6a-HIZ"/>
+                            <constraint firstItem="8ip-LN-0L6" firstAttribute="trailing" secondItem="qxm-7s-PZC" secondAttribute="trailing" id="iD7-En-LcY"/>
+                            <constraint firstItem="8ip-LN-0L6" firstAttribute="leading" secondItem="qxm-7s-PZC" secondAttribute="leading" id="nZK-DM-zgu"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qxm-7s-PZC" secondAttribute="bottom" constant="157" id="wRW-4h-Ki8"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="facebookLogin" destination="qxm-7s-PZC" id="6yd-VV-iO6"/>
+                        <outlet property="logoImage" destination="2JT-7L-Xaq" id="X8V-YV-U9e"/>
+                        <outlet property="welcomeText" destination="8ip-LN-0L6" id="a7U-Nc-jlm"/>
                         <segue destination="tQz-1V-aWw" kind="show" identifier="toHome" id="NCR-43-hhx"/>
                     </connections>
                 </viewController>
@@ -228,5 +253,8 @@
             <point key="canvasLocation" x="877.60000000000002" y="58.920539730134934"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="1000" height="1000"/>
+    </resources>
     <color key="tintColor" white="0.2101247903" alpha="1" colorSpace="calibratedWhite"/>
 </document>
